-fix table sticky lines - fix z-index on dropdown and add stiky column on dom

--- a/src/style/table.css
+++ b/src/style/table.css
@@ -23,10 +23,22 @@
       width: calc(100% + var(--gap));
       overflow-x: auto;
       -ms-overflow-style: -ms-autohiding-scrollbar;
+      tr th:first-child {
+        z-index: 40;
+        position: sticky;
+        left: 0;
+        background-color: inherit;  
+      }
       tr th:last-child {
-        z-index: 29;
+        z-index: 40;
         position: sticky;
         right: 0;
+        background-color: inherit;  
+      }
+      tr td:first-child {
+        z-index: 29;
+        position: sticky;
+        left: 0;
         background-color: inherit;  
       }
       tr td:last-child {
@@ -47,7 +59,7 @@
   }
   thead {
     th.min-width--large {
-      min-width: 500px;
+      min-width: 350px;
     }
     th.min-width--small {
       min-width: 150px;
